// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton should render with default onlyIcon value 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1uxy5k6"
      title="复制"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.667 4.667V2a.667.667 0 0 1 .666-.667H14a.667.667 0 0 1 .667.667v8.667a.667.667 0 0 1-.667.667h-2.667v2.662c0 .37-.3.67-.671.67H2.005a.67.67 0 0 1-.672-.67l.002-8.658c0-.37.3-.671.672-.671zm1.333 0h4.662c.37 0 .671.3.671.671V10h2V2.667H6z"
            fill="#C3C6CD"
          />
        </svg>
      </span>
      <span>
        复制
      </span>
    </button>
  </div>
</body>
`;

exports[`CopyButton should render with empty content 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1uxy5k6"
      title="复制"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.667 4.667V2a.667.667 0 0 1 .666-.667H14a.667.667 0 0 1 .667.667v8.667a.667.667 0 0 1-.667.667h-2.667v2.662c0 .37-.3.67-.671.67H2.005a.67.67 0 0 1-.672-.67l.002-8.658c0-.37.3-.671.672-.671zm1.333 0h4.662c.37 0 .671.3.671.671V10h2V2.667H6z"
            fill="#C3C6CD"
          />
        </svg>
      </span>
      <span>
        复制
      </span>
    </button>
  </div>
</body>
`;

exports[`CopyButton should render with only icon when onlyIcon is true 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1uxy5k6"
      title="复制"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.667 4.667V2a.667.667 0 0 1 .666-.667H14a.667.667 0 0 1 .667.667v8.667a.667.667 0 0 1-.667.667h-2.667v2.662c0 .37-.3.67-.671.67H2.005a.67.67 0 0 1-.672-.67l.002-8.658c0-.37.3-.671.672-.671zm1.333 0h4.662c.37 0 .671.3.671.671V10h2V2.667H6z"
            fill="#C3C6CD"
          />
        </svg>
      </span>
    </button>
  </div>
</body>
`;

exports[`CopyButton should render with text when onlyIcon is false 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1uxy5k6"
      title="复制"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.667 4.667V2a.667.667 0 0 1 .666-.667H14a.667.667 0 0 1 .667.667v8.667a.667.667 0 0 1-.667.667h-2.667v2.662c0 .37-.3.67-.671.67H2.005a.67.67 0 0 1-.672-.67l.002-8.658c0-.37.3-.671.672-.671zm1.333 0h4.662c.37 0 .671.3.671.671V10h2V2.667H6z"
            fill="#C3C6CD"
          />
        </svg>
      </span>
      <span>
        复制
      </span>
    </button>
  </div>
</body>
`;

exports[`CopyButton should render with undefined content 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm basic-button-wrapper css-1uxy5k6"
      title="复制"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.667 4.667V2a.667.667 0 0 1 .666-.667H14a.667.667 0 0 1 .667.667v8.667a.667.667 0 0 1-.667.667h-2.667v2.662c0 .37-.3.67-.671.67H2.005a.67.67 0 0 1-.672-.67l.002-8.658c0-.37.3-.671.672-.671zm1.333 0h4.662c.37 0 .671.3.671.671V10h2V2.667H6z"
            fill="#C3C6CD"
          />
        </svg>
      </span>
      <span>
        复制
      </span>
    </button>
  </div>
</body>
`;
